--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"cheerio": "0.10.1",
 		"cheerio-select": "0.0.3",
 		"config": "0.4.17",
-		"jade": "0.27.5"
+		"jade": "0.27.5",
+		"color": "*"
 	}
 }
