--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"async" : "0.1.22",
 		"cheerio": "0.10.1",
 		"cheerio-select": "0.0.3",
+		"jsdom": "*",
 		"config": "0.4.17",
 		"jade": "0.27.5",
 		"underscore": "*",
